# simple-ids

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  logs
.github/workflows/: build.yml
src/: actions.rs  config.rs  container.rs  context.rs  docker.rs  ffi.rs  logs.rs  main.rs  menus.rs  podman.rs  prelude.rs  prompt.rs  ruleindex.rs  selfupdate.rs  system.rs  term.rs  update.rs
src/menu/: advanced.rs  configure.rs  evebox.rs  mod.rs  suricata.rs  suricata_update.rs
