[package]
name = "easy"
version = "0.1.0"
authors = ["Jason Ish <ish@unx.ca>"]
edition = "2018"
description = "Easy Suricata and EveBox using Containers"
homepage = "https://github.com/jasonish/easy"

# Some tweaks to reduce binary size.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
regex = "1.9.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
clap = { version = "3.2.23", features = ["derive", "color"] }
os-release = "0.1.0"
tracing = { version = "0.1.37", default_features = false, features = [] }
tracing-subscriber = { version = "0.3.17", default_features = false, features = ["fmt", "ansi", "env-filter"] }
libc = "0.2.147"
termcolor = "1.2.0"
sha2 = "0.10.7"
reqwest = { version = "0.11.20", default_features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3.8.0"
