[package]
name = "simplensm"
version = "0.2.0"
authors = ["Jason Ish <jason@codemonkey.net>"]
edition = "2021"
description = "SimpleNSM with Suricata and EveBox"
homepage = "https://github.com/jasonish/simplensm"
license = "MIT"

# Some tweaks to reduce binary size.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive", "color"] }
colored = "2.0.4"
crossterm = "0.27.0"
ctrlc = "3.4.1"
inquire = "0.6.2"
is-terminal = "0.4.9"
libc = "0.2.147"
regex = "1.9.5"
reqwest = { version = "0.11.20", default_features = false, features = ["blocking", "rustls-tls"] }
semver = "1.0.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
tempfile = "3.8.0"
time = "0.3.30"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
